src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>SlackUserId__c</fullName>
        <externalId>true</externalId>
        <label>Slack User ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TimeZoneSidKey__c</fullName>
        <defaultValue>&apos;America/New_York&apos;</defaultValue>
        <description>Time zone in which the contact is located, used to determine cutoff dates for weekly time reports</description>
        <inlineHelpText>Time zone in which the contact is located, used to determine cutoff dates for weekly time reports</inlineHelpText>
        <label>Time Zone</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TimeZoneSidKey</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>WeekFirstDay__c</fullName>
        <defaultValue>&apos;Monday&apos;</defaultValue>
        <description>What the user considers to be the first day of her week. Used to determine the starting day for &quot;Time Entries This Week&quot; and other related reports via the API.</description>
        <inlineHelpText>What the user considers to be the first day of her week</inlineHelpText>
        <label>First Day of Week</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Weekday</valueSetName>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>